# pycsodata

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  NOTICES.md  README.md  pyproject.toml
.github/workflows/: publish.yml  pylint.yml  tests.yml
src/pycsodata/: __init__.py  _types.py  cache.py  catalogue.py  constants.py  dataset.py  exceptions.py  fetchers.py  parsers.py  printer.py  sanitise.py  search.py  spatial.py  ungeneralised.py
tests/: test_cache.py  test_catalogue.py  test_constants.py  test_dataset.py  test_exceptions.py  test_fetchers.py  test_init.py  test_parsers.py  test_printer.py  test_sanitise.py  test_search.py  test_spatial.py  test_types.py  test_ungeneralised.py
