[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycsodata"
version = "0.1.0"
description = "Python package for reading data from Ireland's Central Statistics Office."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Eliza Somerville", email = "somervie@tcd.ie" }]
keywords = [
    "ireland",
    "statistics",
    "spatial-data",
    "cso",
    "census",
    "central-statistics-office",
]
dependencies = [
    "pandas>=2.0",
    "geopandas>=0.13",
    "pyjstat>=2.4",
    "requests>=2.28",
    "cachetools>=5.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "bandit>=1.7",
    "pandas-stubs",
    "types-requests",
    "types-cachetools",
]

[project.urls]
Homepage = "https://elizasomerville.com/software/pycsodata"
Documentation = "https://elizasomerville.com/software/pycsodata"
Repository = "https://github.com/elizasomerville/pycsodata"
Issues = "https://github.com/elizasomerville/pycsodata/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pycsodata*"]
namespaces = false

[tool.setuptools.package-data]
pycsodata = ["py.typed"]

# =============================================================================
# Testing
# =============================================================================

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Shouldn't use this function anymore!:DeprecationWarning:pyjstat\\.pyjstat",
]
markers = [
    "network: tests that require network access to CSO API",
    "slow: tests that take a long time to run",
]

[tool.coverage.run]
source = ["src/pycsodata"]
branch = true
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# =============================================================================
# Linting and Formatting
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0911",  # Too many return statements (complex parsers)
    "PLR0912",  # Too many branches (complex parsers)
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLW2901",  # Loop variable overwritten
    "TC002",   # Type-checking import
]

[tool.ruff.lint.isort]
known-first-party = ["pycsodata"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "PLC0415"]  # Allow unused args, magic values, late imports in tests
"src/pycsodata/parsers.py" = ["PLR0911", "PLR0912"]  # Complex parsing logic
"notebooks/*" = ["ALL"]  # Ignore notebooks

# =============================================================================
# Type Checking
# =============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "notebooks/"]

[[tool.mypy.overrides]]
module = "pyjstat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "geopandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

# =============================================================================
# Security
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Allow assert statements
